2008-10-01 fabien
* initial version